# OsmiumMapGenerator

./: .gitignore  ByteObject.cpp  ByteObject.hpp  CMakeLists.txt  Makefile  README.md  elevation.py  gdal_interfaces.py  osmiumGen.cpp  utils.cpp  utils.hpp
mat/: mat.cpp  mat.hpp
spatial/: Makefile  UniTree.hpp  UniTreeZone.hpp  spacialHashZone.hpp  test.cpp
